--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,43 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./app/fonts";
+
+:root {
+  --dark-color: #000000;
+  --light-color: #ffffff;
+  --primary-color: #AE7AFF;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: 'JetBrains-Mono', 'Times New Roman', Times, serif;
+  background-color: var(--dark-color);
+  color: var(--light-color);
+}
+
+.skill-tag {
+  display: inline;
+  padding: 0 8px;
+  height: 24px;
+  line-height: 24px;
+  color: var(--light-color);
+  border: 1px solid var(--light-color);
+  border-radius: 4px;
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.btn {
+  border: none;
+  background-color: var(--primary-color);
+  color: var(--dark-color);
+  padding: 10px 20px;
+  font-weight: 700;
+  line-height: 24px;
+}
